<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/list_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/archive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/archive_description"
        android:src="@drawable/icon_archive"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/retrofit"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/get_data_with_retrofit" />

        <Button
            android:id="@+id/ktor"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/get_data_with_ktor" />

        <!-- Кнопка сохранения файла -->
        <Button
            android:id="@+id/saveFileButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/save_file" />

        <!-- Кнопка удаления файла -->
        <Button
            android:id="@+id/deleteFileButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/delete_file" />

        <!-- Кнопка резервного копирования -->
        <Button
            android:id="@+id/backupFileButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/backup_file" />

        <!-- Кнопка восстановления файла -->
        <Button
            android:id="@+id/restoreFileButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/restore_file" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
